domain/samples/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
  name: gw-class
spec:
  controllerName: konghq.com/kic-gateway-controller
